--- a/index.html
+++ b/index.html
@@ -21,20 +21,15 @@
                             <div class="title">
                                 <img src="images/a1.jpg" class="divimage">
                                 <i class="fa" aria-hidden="true"></i>
-                                <h2>Basic</h2>
-                            </div>
-                            <div class="price">
-                                <h4><sup>$</sup>25</h4>
-                            </div>
+                                <h2>Welcome Buddy</h2>
+                            </div><br><br>  
                             <div class="option">
                                 <ul>
-                                    <li> <i class="fa fa-check" aria-hidden="true"></i> 10 GB Space </li>
-                                    <li> <i class="fa fa-check" aria-hidden="true"></i> 3 Domain Names </li>
-                                    <li> <i class="fa fa-check" aria-hidden="true"></i> 20 Email Address </li>
-                                    <li> <i class="fa fa-times" aria-hidden="true"></i> Live Support </li>
+                                    <li> <i class="fa fa-check" aria-hidden="true"></i> Parampara pratishta anushashan inke tin niyam hai : ) </li>
+                        
                                 </ul>
                             </div>
-                            <a href="#">Order Now </a>
+                            <a href="#">#Champion </a>
                         </div>
                     </div>
                     <!-- END Col one -->
@@ -43,20 +38,14 @@
                             <div class="title">
                                 <img src="images/a1.jpg" class="divimage">
                                 <i class="fa" aria-hidden="true"></i>
-                                <h2>Standard</h2>
-                            </div>
-                            <div class="price">
-                                <h4><sup>$</sup>50</h4>
-                            </div>
+                                <h2>Aumi : )</h2>
+                            </div><br><br>
                             <div class="option">
                                 <ul>
-                                    <li> <i class="fa fa-check" aria-hidden="true"></i> 50 GB Space </li>
-                                    <li> <i class="fa fa-check" aria-hidden="true"></i> 5 Domain Names </li>
-                                    <li> <i class="fa fa-check" aria-hidden="true"></i> Unlimited Email Address </li>
-                                    <li> <i class="fa fa-times" aria-hidden="true"></i> Live Support </li>
+                                    <li> <i class="fa fa-check" aria-hidden="true"></i><b> Blue Sky Green Pasture <br> handsome boy, watermelon sugar</b> </li>
                                 </ul>
                             </div>
-                            <a href="#">Order Now </a>
+                            <a href="#">#Mr. GTU </a>
                         </div>
                     </div>
                     <!-- END Col two -->
@@ -65,20 +54,14 @@
                             <div class="title">
                                 <img src="images/a1.jpg" class="divimage">
                                 <i class="fa" aria-hidden="true"></i>
-                                <h2>Premium</h2>
-                            </div>
-                            <div class="price">
-                                <h4><sup>$</sup>100</h4>
-                            </div>
+                                <h2>Your B'day Gift</h2>
+                            </div><br><br>
                             <div class="option">
                                 <ul>
-                                    <li> <i class="fa fa-check" aria-hidden="true"></i> Unlimited GB Space </li>
-                                    <li> <i class="fa fa-check" aria-hidden="true"></i> 30 Domain Names </li>
-                                    <li> <i class="fa fa-check" aria-hidden="true"></i> Unlimited Email Address </li>
-                                    <li> <i class="fa fa-check" aria-hidden="true"></i> Live Support </li>
+                                    <li> <i class="fa fa-check" aria-hidden="true"></i> Roses are Red, <br> Violets are Blue <br> And Friends like you ; ) </li>
                                 </ul>
                             </div>
-                            <a href="#">Order Now </a>
+                            <a href="#">#Vlogger </a>
                         </div>
                     </div>
                     <!-- END Col three -->
