--- a/next.html
+++ b/next.html
@@ -16,7 +16,7 @@
 
 <body>
     <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel"
-        style="width: 90%;margin-left: 5%;">
+        style="width: 90%;margin-left: 5%;margin-top: 80px;">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
                 aria-current="true" aria-label="Slide 1"></button>
@@ -29,22 +29,19 @@
             <div class="carousel-item active">
                 <img src="images/a2.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>First slide label</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
+                    <h5>Dosti ka badshah</h5>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="images/a1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Second slide label</h5>
-                    <p>Some representative placeholder content for the second slide.</p>
+                    <h5>Environment ka bazigar</h5>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="images/a3.jpeg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
+                    <h5>Cool man</h5>
                 </div>
             </div>
         </div>
