--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <div class="col-sm-4">
                         <div class="card text-center">
                             <div class="title">
-                                <img src="images/a1.jpg" class="divimage">
+                                <img src="images/3.png" class="divimage">
                                 <i class="fa" aria-hidden="true"></i>
                                 <h2>Welcome Buddy</h2>
                             </div><br><br>  
@@ -37,9 +37,9 @@
                     <div class="col-sm-4">
                         <div class="card text-center">
                             <div class="title">
-                                <img src="images/a1.jpg" class="divimage">
+                                <img src="images/4.png" class="divimage">
                                 <i class="fa" aria-hidden="true"></i>
-                                <h2>Aumi : )</h2>
+                                <h2>Aumie : )</h2>
                             </div><br><br>
                             <div class="option">
                                 <ul>
@@ -53,7 +53,7 @@
                     <div class="col-sm-4">
                         <div class="card text-center">
                             <div class="title">
-                                <img src="images/a1.jpg" class="divimage">
+                                <img src="images/1.png" class="divimage">
                                 <i class="fa" aria-hidden="true"></i>
                                 <h2>Your B'day Gift</h2>
                             </div><br><br>
