--- a/next.html
+++ b/next.html
@@ -27,19 +27,19 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="images/a2.jpg" class="d-block w-100" alt="...">
+                <img src="images/2.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Dosti ka badshah</h5>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="images/a1.jpg" class="d-block w-100" alt="...">
+                <img src="images/6.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Environment ka bazigar</h5>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="images/a3.jpeg" class="d-block w-100" alt="...">
+                <img src="images/3.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Cool man</h5>
                 </div>
