--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                             </div><br><br>  
                             <div class="option">
                                 <ul>
-                                    <li> <i class="fa fa-check" aria-hidden="true"></i> Parampara pratishta anushashan inke tin niyam hai : ) </li>
+                                    <li> Parampara pratishta anushashan inke tin niyam hai : ) </li>
                         
                                 </ul>
                             </div>
@@ -43,7 +43,7 @@
                             </div><br><br>
                             <div class="option">
                                 <ul>
-                                    <li> <i class="fa fa-check" aria-hidden="true"></i><b> Blue Sky Green Pasture <br> handsome boy, watermelon sugar</b> </li>
+                                    <li> <b> Blue Sky Green Pasture <br> handsome boy, watermelon sugar</b> </li>
                                 </ul>
                             </div>
                             <a href="#">#Mr. GTU </a>
@@ -59,7 +59,7 @@
                             </div><br><br>
                             <div class="option">
                                 <ul>
-                                    <li> <i class="fa fa-check" aria-hidden="true"></i> Roses are Red, <br> Violets are Blue <br> And Friends like you ; ) </li>
+                                    <li> Roses are Red, <br> Violets are Blue <br> And Friends like you ; ) </li>
                                 </ul>
                             </div>
                             <a href="#">#Vlogger </a>
