--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-        <center> <a class="glow-on-hover" onclick="prompt('Bro you have to enter code to move ahead!!!') == '20010811'" href="next.html">NEXT</a></center>
+        <center> <a class="glow-on-hover" onclick="prompt('Bro you have to enter code to move ahead!!!') === '20010811' ? true:false" href="next.html">NEXT</a></center>
 
     <section>
         <div class="container-fluid">
